<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RegisterActivity"
    tools:showIn="@layout/activity_register">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_title"
        android:layout_marginTop="16dp"
        app:met_floatingLabel="normal"
        android:hint="@string/username"
        android:maxLength="32"
        app:met_maxCharacters="32"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:layout_marginTop="16dp"
        app:met_floatingLabel="normal"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:layout_marginTop="16dp"
        app:met_floatingLabel="normal"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_marginTop="24dp"
        android:paddingTop="@dimen/fat_button_padding"
        android:paddingBottom="@dimen/fat_button_padding"
        android:paddingStart="@dimen/long_button_padding"
        android:paddingLeft="@dimen/long_button_padding"
        android:paddingEnd="@dimen/long_button_padding"
        android:paddingRight="@dimen/long_button_padding"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/register"/>

    <TextView
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/register_button"
        app:layout_constraintBottom_toBottomOf="@id/register_button"
        android:padding="8dp"
        android:text="@string/sign_in"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textAllCaps="true"/>
</androidx.constraintlayout.widget.ConstraintLayout>