<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ForgotPasswordActivity"
    tools:showIn="@layout/activity_forgot_password">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/recovery_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:met_floatingLabel="normal"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recovery_email"
        android:layout_marginTop="24dp"
        android:paddingTop="@dimen/fat_button_padding"
        android:paddingBottom="@dimen/fat_button_padding"
        android:paddingStart="@dimen/long_button_padding"
        android:paddingLeft="@dimen/long_button_padding"
        android:paddingEnd="@dimen/long_button_padding"
        android:paddingRight="@dimen/long_button_padding"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/reset_password"/>

    <TextView
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_button"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:text="@string/reset_password_description"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>